plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    alias libs.plugins.modDevGradleLegacy
    alias libs.plugins.spotless
    alias libs.plugins.kotlin.jvm
    alias libs.plugins.kotlin.plugin
}

version = mod_version

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets.main.resources { srcDir 'src/generated/resources' }

apply from: "$rootDir/gradle/scripts/moddevgradle.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/spotless.gradle"

generateModMetadata.doFirst {
    mkdir('run/client')
    mkdir('run/server')
    mkdir('run/data')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs << "-Xlint:-deprecation" << "-Xlint:-removal"
}

jar {
    exclude "**/.cache"
    exclude "**/SimplifiedToTraditional.properties"
}

java {
    withSourcesJar()
}
